crates/arteziac/tests/snapshots/parser__struct_literal.snap
---
source: crates/arteziac/tests/parser.rs
expression: "check(\"struct Foo { bar: Bool } func main() { let x = Foo { bar: true }; }\")"
---
File {
    items: [
        Struct(
            StructDef {
                id: NodeId(
                    2,
                ),
                name_span: 7..10,
                fields: [
                    FieldDef {
                        id: NodeId(
                            1,
                        ),
                        name_span: 13..16,
                        ty: Named {
                            id: NodeId(
                                0,
                            ),
                            path: [
                                18..22,
                            ],
                            span: 18..22,
                        },
                        span: 13..22,
                    },
                ],
                span: 0..24,
            },
        ),
        Func(
            Func {
                id: NodeId(
                    8,
                ),
                name_span: 30..34,
                receiver_type_span: None,
                receiver: None,
                params: [],
                ret: None,
                body: Block {
                    id: NodeId(
                        7,
                    ),
                    stmts: [
                        Let {
                            id: NodeId(
                                6,
                            ),
                            name_span: 43..44,
                            ty: None,
                            init: StructLit {
                                id: NodeId(
                                    5,
                                ),
                                type_span: 47..50,
                                fields: [
                                    FieldInit {
                                        id: NodeId(
                                            4,
                                        ),
                                        name_span: 53..56,
                                        value: Bool {
                                            id: NodeId(
                                                3,
                                            ),
                                            span: 58..62,
                                        },
                                        span: 53..62,
                                    },
                                ],
                                span: 47..64,
                            },
                            span: 39..64,
                        },
                    ],
                    tail: None,
                    span: 37..67,
                },
                span: 25..67,
            },
        ),
    ],
}
--- diagnostics ---
[]
